--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -23,4 +23,6 @@ jobs:
           PORTAINER_USER: ${{ secrets.PORTAINERSSH_USER }}
           PORTAINER_PASSWORD: ${{ secrets.PORTAINERSSH_PASS }}
           GITHUB_REPO_URL: https://github.com/$GITHUB_REPOSITORY
+        run: echo $GITHUB_REPO_URL
+        run: echo $GITHUB_SHA
         run: echo "export GITHUB_SHA=$GITHUB_SHA; export GITHUB_REPO_URL=$GITHUB_REPO_URL; cd testtask1; git remote add github-deploy $GITHUB_REPO_URL; git fetch github-deploy; git checkout $GITHUB_SHA -- docker4drupal/drup_deploy_gh.sh; cd docker4drupal; cp -a ./drup_deploy_gh.sh /tmp/drup_deploy_gh.sh; /tmp/drup_deploy_gh.sh; exit" | ./portainerssh korn_docker4drupal_test_project_php
